[package]
name = "graphiql"
version = "0.1.0"
authors = ["talves <tony@3alves.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0.0"
actix-cors = "0.3.0"

futures = "0.3.5"
tokio = { version = "0.2", features = ["rt-core", "macros"] }
env_logger = "0.7.1"
serde = "1.0.115"
serde_json = "1.0.57"
rand = "0.7.3"

juniper = { git = "https://github.com/graphql-rust/juniper", features = ["expose-test-schema"] }
juniper_actix = { git = "https://github.com/graphql-rust/juniper", features = ["subscriptions"] }
juniper_graphql_ws = { git = "https://github.com/graphql-rust/juniper" }

